--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pyserial==3.4
-PyQt5==5.15.0
+pyserial>=3.4
+PyQt5>=5.15.0
 numpy>=1.19.1
-pyqtgraph==0.11.0
-matplotlib==3.1.3
+pyqtgraph>=0.11.0
+matplotlib>=3.1.3
 opencv-python>=4.4.0.46
